--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,11 +4,19 @@
     Welcome to {{title}}!!
   </h1>
   </div>
-<div>
-  <h2>Hero {{hero.name}} details </h2>
-  <div><label>id: </label>{{hero.id}}</div>
+<div *ngIf="selectedHero">
+  <h2>Hero {{selectedHero.name}} details </h2>
+  <div><label>id: </label>{{selectedHero.id}}</div>
   <div>
     <label>name: </label>
-    <input [(ngModel)]="hero.name" placeholder="name">
+    <input [(ngModel)]="selectedHero.name" placeholder="name">
   </div>
+</div>
+<div>
+  <h2>My Heroes</h2>
+    <ul class="heroes">
+      <li *ngFor="let hero of heroes" (click)="onSelect(hero)">
+        <span class="badge">{{hero.id}}</span> {{hero.name}}
+      </li>
+    </ul>
 </div>
